objects/Product2.object
<CustomObject>
    <fields>
        <fullName>TW1_Area__c</fullName>
        <description>Área da Unidade</description>
        <label>Área</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_Bancada_Gourmet__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campo informativo se existe Bancada Gourmet</description>
        <label>Bancada Gourmet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TW1_Bloco__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Bloco vinculado a Unidade</description>
        <label>Bloco</label>
        <referenceTo>TW1_Bloco__c</referenceTo>
        <relationshipLabel>Unidades</relationshipLabel>
        <relationshipName>Unidades</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_Brinde_de_Campanha__c</fullName>
        <description>Lista de brindes de campanha</description>
        <label>Brinde de Campanha</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Armário</fullName>
                </value>
                <value>
                    <fullName>Carro 0Km</fullName>
                </value>
                <value>
                    <fullName>Documentação</fullName>
                </value>
                <value>
                    <fullName>Linha branca</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Chaves_Entregue__c</fullName>
        <description>Informar se as chaves foram entregues</description>
        <label>Chaves Entregue</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Lista_Sim_Nao</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Churrasqueira__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campo informativo se existe Churrasqueira</description>
        <label>Churrasqueira</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TW1_Cobertura_Duplex__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campo informativo se existe Cobertura Duplex</description>
        <label>Cobertura Duplex</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TW1_Cobertura_Linear__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campo informativo se existe Cobertura Linear</description>
        <label>Cobertura Linear</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TW1_Codigo_Bloco_UAU__c</fullName>
        <formula>TW1_Bloco__r.TW1_Codigo_Bloco_UAU__c</formula>
        <label>Código Bloco ERP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Codigo_Conta_UAU__c</fullName>
        <formula>TW1_Conta__r.Tw1_Codigo_Cliente_UAU__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Codigo Conta ERP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Codigo_Empreendimento_UAU__c</fullName>
        <formula>TW1_Bloco__r.TW1_Empreendimento__r.TW1_Codigo_Obra_UAU__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Código Empreendimento ERP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Codigo_Empresa_UAU__c</fullName>
        <formula>TW1_Bloco__r.TW1_Empreendimento__r.TW1_Empresa__r.TW1_cod_empresa_UAU__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Código Empresa ERP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Codigo_Obra_UAU__c</fullName>
        <formula>TW1_Bloco__r.TW1_Codigo_Obra_UAU__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Código Obra ERP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Codigo_Personalizacao_UAU__c</fullName>
        <description>Código de Personalização do UAU</description>
        <externalId>true</externalId>
        <label>Código Personalização ERP</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Codigo_Produto_UAU__c</fullName>
        <formula>TW1_Bloco__r.TW1_Codigo_Produto_UAU__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Codigo Produto ERP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Conta__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Conta</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Unidades</relationshipLabel>
        <relationshipName>Produtos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_Cozinha_Americana__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campo informativo se existe Cozinha Americana</description>
        <label>Cozinha Americana</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TW1_Cozinha__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campo informativo se existe Cozinha</description>
        <label>Cozinha</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TW1_Data_Averbacao_Habite_se__c</fullName>
        <description>Data que o Habite-se foi averbado.</description>
        <label>Data Averbação do Habite-se</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TW1_Data_Habite_se__c</fullName>
        <description>Informar a data do Habite-se</description>
        <label>Data do Habite-se</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TW1_Data_Liberacao_Vistoria__c</fullName>
        <description>Data que a unidade foi liberada para Vistoria</description>
        <label>Data da Liberação da Vistoria</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TW1_Data_Previsao_Habite_se__c</fullName>
        <description>Data prevista para liberação do Habite-se</description>
        <label>Data de Previsão do Habite-se</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TW1_Data_Vistoria__c</fullName>
        <description>Data do término do processo de vistoria.</description>
        <label>Data da Vistoria</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TW1_Data_da_Venda__c</fullName>
        <label>Data da Venda</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TW1_Data_inicio_agend_vistoria_prenchida__c</fullName>
        <formula>IF(ISBLANK( TW1_Data_inicio_para_agendar_vistoria__c ),FALSE,TRUE )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Data inicio agend vistoria prenchida</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TW1_Data_inicio_para_agendar_vistoria__c</fullName>
        <label>Data inicio para agendar vistoria</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TW1_Dependencia__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campo informativo se existe Dependência</description>
        <label>Dependência</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TW1_Disponibilidade__c</fullName>
        <formula>IF(OR(ISBLANK(TW1_Conta__c), ISBLANK(TW1_Numero_Venda__c)), &quot;DISPONÍVEL&quot;, &quot;VENDIDA&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Disponibilidade</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Documento_Definitivo_Assinado__c</fullName>
        <label>Documento Definitivo Assinado</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Empreendimento__c</fullName>
        <formula>TW1_Bloco__r.TW1_Empreendimento__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Empreendimento</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Empresa__c</fullName>
        <formula>TW1_Bloco__r.TW1_Empreendimento__r.TW1_Empresa__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Empresa</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Entrega_Chaves_Escritura_Definitiva__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Entrega de Chaves - Escritura Definitiva</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TW1_Entrega_Chaves_Financiamento__c</fullName>
        <label>Entrega Chaves - Financiamento</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Entrega_Chaves_Iniciado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Entrega de Chaves Iniciado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TW1_Fase_Inadimplencia__c</fullName>
        <label>Fase Inadimplência</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Adimplente</fullName>
                    <default>true</default>
                    <label>Adimplente</label>
                </value>
                <value>
                    <fullName>Inadimplência Amigável</fullName>
                </value>
                <value>
                    <fullName>Inadimplência Extrajudicial</fullName>
                </value>
                <value>
                    <fullName>Inadimplência Judicial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Fracao_Ideal__c</fullName>
        <description>Fração ideal referente a unidade</description>
        <label>Fração ideal</label>
        <precision>18</precision>
        <scale>17</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_Home_Office__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campo informativo se existe Home Office</description>
        <label>Home Office</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TW1_ID_Inadimplencia__c</fullName>
        <label>ID Inadimplencia</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_ID_Repasse__c</fullName>
        <label>ID Repasse</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Identificador_UAU__c</fullName>
        <label>Identificador ERP</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Lavabo__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campo informativo se existe Lavabo</description>
        <label>Lavabo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TW1_Liberada_para_Vistoria__c</fullName>
        <description>Libera a unidade para vistoria, com isso criando o Caso de Vistoria de Unidade.</description>
        <label>Liberada para Vistoria</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Lista_Sim_Nao</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Liberado_Repasse__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Liberado Repasse</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TW1_Liberar_Chaves__c</fullName>
        <label>Liberar Chaves</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Sim - Com Pendências</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Mes_da_Venda__c</fullName>
        <formula>CASE(MONTH(TW1_Data_da_Venda__c),1,&quot;Janeiro&quot;,2,&quot;Fevereiro&quot;,3,&quot;Março&quot;,4,&quot;Abril&quot;,5,&quot;Maio&quot;,6,&quot;Junho&quot;,7,&quot;Julho&quot;,8,&quot;Agosto&quot;,9,&quot;Setembro&quot;,10,&quot;Outubro&quot;,11,&quot;Novembro&quot;,&quot;Dezembro&quot;) &amp; &quot;/&quot; &amp;  TEXT(YEAR(TW1_Data_da_Venda__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mês da Venda</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Motivo_Pausa_Repasse__c</fullName>
        <label>Motivo da Pausa do Repasse</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Nome_Bloco__c</fullName>
        <formula>TW1_Bloco__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TW1_Nome_Bloco</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Numero_Venda__c</fullName>
        <externalId>true</externalId>
        <label>Número da Venda</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Pavimento__c</fullName>
        <description>Pavimento que está localizada a unidade.</description>
        <label>Pavimento</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Pendencia_Condominial_Entrega_Chaves__c</fullName>
        <label>Pendência Condominial - Entrega Chaves</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Piscina__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campo informativo se existe Piscina</description>
        <label>Piscina</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TW1_Posicao_Sol__c</fullName>
        <description>Posição de incidência do Sol na Unidade</description>
        <label>Posição Sol</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Manhã</fullName>
                </value>
                <value>
                    <fullName>Tarde</fullName>
                </value>
                <value>
                    <fullName>Manhã/Tarde</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Preco__c</fullName>
        <label>Preço</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TW1_Primeira_Entrega_Chaves__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primeira Entrega Chaves</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TW1_Qtd_Vagas__c</fullName>
        <description>Quantidade de vagas da unidade</description>
        <label>Qtd Vagas</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_Quarto__c</fullName>
        <label>Quarto</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Responsavel_Vistoria_Manutencao__c</fullName>
        <formula>TEXT(TW1_Bloco__r.TW1_Responsavel_Manutencao_Vistoria__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Responsavel Vistoria/Manutenção</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Saldo_Devedor_UAU__c</fullName>
        <label>Saldo Devedor ERP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TW1_Saldo_em_atraso__c</fullName>
        <label>Saldo em atraso</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TW1_Salete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campo informativo se existe Salete</description>
        <label>Salete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TW1_Sauna__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campo informativo se existe Sauna</description>
        <label>Sauna</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TW1_Status_Financeiro__c</fullName>
        <formula>IF(TW1_Unidade_Adimplente__c = True, IMAGE(&quot;https://c.na59.content.force.com/servlet/servlet.ImageServer?id=015f4000000jbxH&amp;oid=00Df40000037JhH&amp;lastMod=1525882823000&quot;, &quot;Adimplente&quot;), IMAGE(&quot;https://c.na59.content.force.com/servlet/servlet.ImageServer?id=015f4000000jbxG&amp;oid=00Df40000037JhH&amp;lastMod=1525882823000&quot;, &quot;Inadimplente&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Financeiro</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Status_Venda__c</fullName>
        <label>Status da Venda</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Normal</fullName>
                </value>
                <value>
                    <fullName>Cancelada</fullName>
                </value>
                <value>
                    <fullName>Alterada</fullName>
                </value>
                <value>
                    <fullName>Quitada</fullName>
                </value>
                <value>
                    <fullName>Em Acerto</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Status__c</fullName>
        <label>Status da Unidade</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Disponível</fullName>
                </value>
                <value>
                    <fullName>Vendido</fullName>
                </value>
                <value>
                    <fullName>Fora de venda</fullName>
                </value>
                <value>
                    <fullName>Reservado</fullName>
                </value>
                <value>
                    <fullName>Proposta</fullName>
                </value>
                <value>
                    <fullName>Quitado</fullName>
                </value>
                <value>
                    <fullName>Escriturado</fullName>
                </value>
                <value>
                    <fullName>Em venda</fullName>
                </value>
                <value>
                    <fullName>Suspenso</fullName>
                </value>
                <value>
                    <fullName>Em acerto</fullName>
                </value>
                <value>
                    <fullName>Dação</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Status_do_Repasse__c</fullName>
        <defaultValue>&quot;Estoque&quot;</defaultValue>
        <label>Status do Financiamento</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Suite_Canadense__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campo informativo se existe Suite Canadense</description>
        <label>Suíte Canadense</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TW1_Suite_Closet__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campo informativo se existe Suite com Closet</description>
        <label>Suíte</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TW1_Suite__c</fullName>
        <description>Quantidade de suítes da unidade</description>
        <label>Suíte</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Terraco__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campo informativo se existe Terraço</description>
        <label>Terraço</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TW1_Tipo_Contrato_Definitivo__c</fullName>
        <label>Tipo de Contrato Definitivo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alienação Fiduciária</fullName>
                </value>
                <value>
                    <fullName>Financiamento</fullName>
                </value>
                <value>
                    <fullName>Compra e Venda com Quitação</fullName>
                </value>
                <value>
                    <fullName>LEGADO</fullName>
                </value>
                <value>
                    <fullName>A atualizar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Tipo_Contrato_Venda__c</fullName>
        <label>Tipo de Contrato de Venda</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>11</fullName>
                    <label>PCV Pública com financiamento</label>
                </value>
                <value>
                    <fullName>12</fullName>
                    <label>PCV Particular com financiamento</label>
                </value>
                <value>
                    <fullName>13</fullName>
                    <label>PCV Pública à vista</label>
                </value>
                <value>
                    <fullName>14</fullName>
                    <label>PCV Particular à vista</label>
                </value>
                <value>
                    <fullName>15</fullName>
                    <label>Recibo de sinal com prev. Financiamento</label>
                </value>
                <value>
                    <fullName>16</fullName>
                    <label>Recibo de sinal a vista</label>
                </value>
                <value>
                    <fullName>17</fullName>
                    <label>Recibo de sinal com prev. AF</label>
                </value>
                <value>
                    <fullName>18</fullName>
                    <label>CV com AF Particular</label>
                </value>
                <value>
                    <fullName>19</fullName>
                    <label>CV Pública</label>
                </value>
                <value>
                    <fullName>22</fullName>
                    <label>Rescisão Pública</label>
                </value>
                <value>
                    <fullName>23</fullName>
                    <label>Rescisão Particular</label>
                </value>
                <value>
                    <fullName>24</fullName>
                    <label>Cessão de Direitos Pública</label>
                </value>
                <value>
                    <fullName>25</fullName>
                    <label>Cessão de Direitos Particular</label>
                </value>
                <value>
                    <fullName>26</fullName>
                    <label>PCV Particular com previsão de AF</label>
                </value>
                <value>
                    <fullName>27</fullName>
                    <label>CV com AF Pública</label>
                </value>
                <value>
                    <fullName>28</fullName>
                    <label>PCV Pública com previsão de AF</label>
                </value>
                <value>
                    <fullName>29</fullName>
                    <label>Cessão Pública de AF</label>
                </value>
                <value>
                    <fullName>30</fullName>
                    <label>Cessão Particular de AF</label>
                </value>
                <value>
                    <fullName>31</fullName>
                    <label>Dação em pagamento</label>
                </value>
                <value>
                    <fullName>32</fullName>
                    <label>Aditamento de AF</label>
                </value>
                <value>
                    <fullName>33</fullName>
                    <label>PCV Pública com recursos próprios</label>
                </value>
                <value>
                    <fullName>34</fullName>
                    <label>PCV Particular com recursos próprios</label>
                </value>
                <value>
                    <fullName>PERMUTANTE</fullName>
                </value>
                <value>
                    <fullName>LEGADO</fullName>
                </value>
                <value>
                    <fullName>A atualizar</fullName>
                </value>
                <value>
                    <fullName>Alienação Fiduciária</fullName>
                    <isActive>false</isActive>
                    <label>Alienação Fiduciária</label>
                </value>
                <value>
                    <fullName>Financiamento</fullName>
                    <isActive>false</isActive>
                    <label>Financiamento</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Tipo_de_Vaga__c</fullName>
        <label>Tipo de Vaga</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dupla</fullName>
                </value>
                <value>
                    <fullName>Simples</fullName>
                </value>
                <value>
                    <fullName>Vaga descoberta de uso distinto</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Unidade_Adimplente__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Quando a unidade estiver adimplente, o valor padrão é selecionado</description>
        <label>Unidade Adimplente</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TW1_Unidade__c</fullName>
        <description>Número da Unidade</description>
        <label>Unidade</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Valor_Principal_Inadimplencia__c</fullName>
        <label>Valor Principal Inadimplência</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TW1_Valor_Reajustado_Inadimplencia__c</fullName>
        <label>Valor Reajustado Inadimplência</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TW1_Valor_Total_Pago_UAU__c</fullName>
        <label>Valor Total Pago ERP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TW1_Valor_da_Venda_UAU__c</fullName>
        <label>Valor da Venda ERP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TW1_Valor_de_Venda_Atualizado_UAU__c</fullName>
        <label>Valor de Venda Atualizado ERP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TW1_Varanda_Gourmet__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campo informativo se existe Varanda Gourmet</description>
        <label>Varanda Gourmet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TW1_Varanda__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campo informativo se existe varanda</description>
        <label>Varanda</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TW1_Visao_Carteira__c</fullName>
        <formula>IF(
	TW1_Disponibilidade__c = &quot;DISPONÍVEL&quot;,
	&quot;Estoque&quot;,
	IF(
		AND(
				TW1_Disponibilidade__c = &quot;VENDIDA&quot;,
				ISPICKVAL(TW1_Status__c, &quot;Quitado&quot;)
			),
		&quot;Quitado&quot;,
		IF(
			OR(
				AND(
					NOT(ISBLANK(TW1_ID_Repasse__c)),
					NOT(TW1_Status_do_Repasse__c = &quot;Pausado&quot;)
					),
				AND(
					NOT(ISBLANK(TW1_ID_Repasse__c)),
					TW1_Status_do_Repasse__c = &quot;Pausado&quot;,
					NOT(TW1_Motivo_Pausa_Repasse__c = &quot;Inadimplência jurídica&quot;)
					),
				AND(
					NOT(ISBLANK(TW1_ID_Repasse__c)),
					TW1_Status_do_Repasse__c = &quot;Pausado&quot;,
					TW1_Motivo_Pausa_Repasse__c = &quot;Inadimplência jurídica&quot;,
					ISBLANK( TW1_ID_Inadimplencia__c)
					)					
				),
			&quot;Financiamento&quot;,
			IF(
				NOT(ISBLANK( TW1_ID_Inadimplencia__c)),
				TEXT(TW1_Fase_Inadimplencia__c) ,
				&quot;Carteira Direta Adimplente&quot;
				)
			)
		)
	)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Visão Carteira</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Vistoria_Area_Comum__c</fullName>
        <formula>TEXT(TW1_Bloco__r.TW1_Empreendimento__r.TW1_Vistoria_Realizada__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vistoria Área Comum</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Vistoriada__c</fullName>
        <description>Informa se unidade foi ou não vistoriada</description>
        <label>Vistoriada</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Lista_Sim_Nao</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Vistorias_Realizadas__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Vistorias Realizadas</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_WC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campo informativo se existe W.C</description>
        <label>W.C</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tw1_Data_Entrega_Chaves__c</fullName>
        <label>Data Entrega Chaves</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Tw1_Fase__c</fullName>
        <description>Informa a Fase de Obra da Unidade (Pronta ou em Construção)</description>
        <label>Fase</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pronta</fullName>
                </value>
                <value>
                    <fullName>Em Construção</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tw1_Securitizado__c</fullName>
        <description>Informa se unidade está securitizada ou não.</description>
        <label>Securitizado</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <columns>TW1_Empresa__c</columns>
        <columns>TW1_Empreendimento__c</columns>
        <columns>TW1_Bloco__c</columns>
        <columns>PRODUCT2.NAME</columns>
        <columns>TW1_Liberada_para_Vistoria__c</columns>
        <columns>TW1_Status__c</columns>
        <columns>TW1_Data_inicio_para_agendar_vistoria__c</columns>
        <filterScope>Everything</filterScope>
        <label>Todas Unidades</label>
        <sharedTo>
            <role>Administrador</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Unidades_Engenharia</fullName>
        <columns>TW1_Empreendimento__c</columns>
        <columns>TW1_Bloco__c</columns>
        <columns>PRODUCT2.NAME</columns>
        <columns>TW1_Liberada_para_Vistoria__c</columns>
        <columns>TW1_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>Unidades - Engenharia</label>
        <sharedTo>
            <role>TW1_Engenharia</role>
        </sharedTo>
    </listViews>
</CustomObject>